// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-auto-entrepreneur > ACRE 1`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 21341
dirigeant . auto-entrepreneur . cotisations et contributions: 112
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 110
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 26
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 3
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 11
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 22
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 48
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 110
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 6
dirigeant . auto-entrepreneur . revenu net: 20000
dirigeant . auto-entrepreneur . revenu net . après impôt: 20000
dirigeant . rémunération . impôt: 0

Notifications affichées : dirigeant . auto-entrepreneur . Acre . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur > ACRE 2`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 22986
dirigeant . auto-entrepreneur . cotisations et contributions: 249
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 245
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 62
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 8
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 10
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 51
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 114
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: 245
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: 13
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: null
dirigeant . auto-entrepreneur . revenu net: 20000
dirigeant . auto-entrepreneur . revenu net . après impôt: 20000
dirigeant . rémunération . impôt: 0

Notifications affichées : dirigeant . auto-entrepreneur . Acre . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur > ACRE 3`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 21444
dirigeant . auto-entrepreneur . cotisations et contributions: 120
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 111
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 26
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 3
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 11
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 22
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 48
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 111
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 6
dirigeant . auto-entrepreneur . revenu net: 20000
dirigeant . auto-entrepreneur . revenu net . après impôt: 20000
dirigeant . rémunération . impôt: 0

Notifications affichées : dirigeant . auto-entrepreneur . Acre . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur > ACRE 4`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 22564
dirigeant . auto-entrepreneur . cotisations et contributions: 214
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 199
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 47
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 6
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 20
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 39
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 86
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 199
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 11
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: null
dirigeant . auto-entrepreneur . revenu net: 20000
dirigeant . auto-entrepreneur . revenu net . après impôt: 20000
dirigeant . rémunération . impôt: 0

Notifications affichées : dirigeant . auto-entrepreneur . Acre . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur > ACRE 5`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 22410
dirigeant . auto-entrepreneur . cotisations et contributions: 201
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 198
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 47
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 6
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 20
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 39
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 86
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 198
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 11
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: null
dirigeant . auto-entrepreneur . revenu net: 20000
dirigeant . auto-entrepreneur . revenu net . après impôt: 20000
dirigeant . rémunération . impôt: 0

Notifications affichées : dirigeant . auto-entrepreneur . Acre . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur > ACRE 6`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 22410
dirigeant . auto-entrepreneur . cotisations et contributions: 201
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 198
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 47
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 6
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 20
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 39
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 86
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 198
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 11
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: null
dirigeant . auto-entrepreneur . revenu net: 20000
dirigeant . auto-entrepreneur . revenu net . après impôt: 20000
dirigeant . rémunération . impôt: 0

Notifications affichées : dirigeant . auto-entrepreneur . Acre . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur > ACRE 7`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 32012
dirigeant . auto-entrepreneur . cotisations et contributions: 168
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 165
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 39
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 5
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 17
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 33
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 72
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 165
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 6
dirigeant . auto-entrepreneur . revenu net: 30000
dirigeant . auto-entrepreneur . revenu net . après impôt: 30000
dirigeant . rémunération . impôt: 0

Notifications affichées : dirigeant . auto-entrepreneur . Acre . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur > DROM 1`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 221
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 219
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 52
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 7
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 19
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 44
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 96
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 142
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 14
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: 43
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: 17
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: 14
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 34
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 8
dirigeant . auto-entrepreneur . revenu net: 17349
dirigeant . auto-entrepreneur . revenu net . après impôt: 17349
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > DROM 2`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 45000
dirigeant . auto-entrepreneur . cotisations et contributions: 312
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 307
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 72
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 10
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 31
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 61
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 133
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 14
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: 17
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: 14
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 307
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 8
dirigeant . auto-entrepreneur . revenu net: 41259
dirigeant . auto-entrepreneur . revenu net . après impôt: 41259
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > DROM 3`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 58
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 56
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 13
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 2
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 5
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 11
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 25
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 36
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 4
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: 11
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: 4
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: 7
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 9
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 2
dirigeant . auto-entrepreneur . revenu net: 19305
dirigeant . auto-entrepreneur . revenu net . après impôt: 19305
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > DROM 4`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 167
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 165
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 39
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 5
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 15
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 33
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 73
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 106
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 11
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: 33
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: 13
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: 11
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 26
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 6
dirigeant . auto-entrepreneur . revenu net: 17997
dirigeant . auto-entrepreneur . revenu net . après impôt: 17997
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > activité mixte 1`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 282
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 280
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 66
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 9
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 28
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 55
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 122
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 177
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 21
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: 0
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: 26
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 103
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
dirigeant . auto-entrepreneur . revenu net: 16620
dirigeant . auto-entrepreneur . revenu net . après impôt: 16620
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > activité mixte 2`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 355
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 352
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 88
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 12
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 18
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 73
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 161
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 0
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 21
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: 284
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: 26
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 68
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
dirigeant . auto-entrepreneur . revenu net: 15743
dirigeant . auto-entrepreneur . revenu net . après impôt: 15743
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > activité mixte 3`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 291
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 280
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 66
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 9
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 28
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 55
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 122
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 177
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 21
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: 0
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: 26
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 103
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
dirigeant . auto-entrepreneur . revenu net: 16508
dirigeant . auto-entrepreneur . revenu net . après impôt: 16508
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > activité mixte 4`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: undefined
dirigeant . auto-entrepreneur . cotisations et contributions: 726
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 720
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 173
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 23
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 60
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 145
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 319
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 353
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 21
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: 213
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: 26
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 154
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
dirigeant . auto-entrepreneur . revenu net: undefined
dirigeant . auto-entrepreneur . revenu net . après impôt: undefined
dirigeant . rémunération . impôt: 621"
`;

exports[`calculate simulations-auto-entrepreneur > activités 1`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 430
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 427
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 108
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 14
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 18
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 90
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 198
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: 427
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: 26
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: null
dirigeant . auto-entrepreneur . revenu net: 14836
dirigeant . auto-entrepreneur . revenu net . après impôt: 14836
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > activités 2`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 390
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 387
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 104
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 5
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 44
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 119
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 114
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: 387
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: 23
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: null
dirigeant . auto-entrepreneur . revenu net: 15316
dirigeant . auto-entrepreneur . revenu net . après impôt: 15316
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > activités 3`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 214
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 205
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 48
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 6
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 21
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 40
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 89
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 205
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
dirigeant . auto-entrepreneur . revenu net: 17432
dirigeant . auto-entrepreneur . revenu net . après impôt: 17432
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > activités 4`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 366
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 353
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 83
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 11
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 35
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 70
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 153
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 353
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 21
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: null
dirigeant . auto-entrepreneur . revenu net: 15608
dirigeant . auto-entrepreneur . revenu net . après impôt: 15608
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > activités 5`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 207
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 205
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 48
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 6
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 21
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 40
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 89
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 205
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
dirigeant . auto-entrepreneur . revenu net: 17520
dirigeant . auto-entrepreneur . revenu net . après impôt: 17520
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > activités 6`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 20000
dirigeant . auto-entrepreneur . cotisations et contributions: 356
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 353
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 83
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 11
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 35
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 70
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 153
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: 353
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: 21
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: null
dirigeant . auto-entrepreneur . revenu net: 15732
dirigeant . auto-entrepreneur . revenu net . après impôt: 15732
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > aides 1`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 5701
dirigeant . auto-entrepreneur . cotisations et contributions: 58
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 58
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 14
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 2
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 6
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 11
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 25
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 58
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
dirigeant . auto-entrepreneur . revenu net: 5000
dirigeant . auto-entrepreneur . revenu net . après impôt: 5000
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > aides 2`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 57089
dirigeant . auto-entrepreneur . cotisations et contributions: 591
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 585
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 138
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 18
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 59
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 116
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 254
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 585
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
dirigeant . auto-entrepreneur . revenu net: 50000
dirigeant . auto-entrepreneur . revenu net . après impôt: 50000
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > impôt sur le revenu 1`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 33696
dirigeant . auto-entrepreneur . cotisations et contributions: 725
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 719
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 181
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 24
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 29
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 151
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 334
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: 719
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: 26
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: null
dirigeant . auto-entrepreneur . revenu net: 25000
dirigeant . auto-entrepreneur . revenu net . après impôt: 24259
dirigeant . rémunération . impôt: 741"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 1`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 573
dirigeant . auto-entrepreneur . cotisations et contributions: 6
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 6
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 1
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 0
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 1
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 1
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 3
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 6
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
dirigeant . auto-entrepreneur . revenu net: 500
dirigeant . auto-entrepreneur . revenu net . après impôt: 500
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 2`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 1145
dirigeant . auto-entrepreneur . cotisations et contributions: 12
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 12
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 3
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 0
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 1
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 2
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 5
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 12
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
dirigeant . auto-entrepreneur . revenu net: 1000
dirigeant . auto-entrepreneur . revenu net . après impôt: 1000
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 3`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 2278
dirigeant . auto-entrepreneur . cotisations et contributions: 23
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 23
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 5
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 1
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 2
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 5
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 10
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 23
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
dirigeant . auto-entrepreneur . revenu net: 2000
dirigeant . auto-entrepreneur . revenu net . après impôt: 2000
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 4`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 5701
dirigeant . auto-entrepreneur . cotisations et contributions: 58
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 58
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 14
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 2
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 6
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 11
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 25
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 58
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
dirigeant . auto-entrepreneur . revenu net: 5000
dirigeant . auto-entrepreneur . revenu net . après impôt: 5000
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 5`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 11416
dirigeant . auto-entrepreneur . cotisations et contributions: 118
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 117
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 28
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 4
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 12
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 23
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 51
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 117
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
dirigeant . auto-entrepreneur . revenu net: 10000
dirigeant . auto-entrepreneur . revenu net . après impôt: 10000
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 6`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 22831
dirigeant . auto-entrepreneur . cotisations et contributions: 236
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 234
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 55
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 7
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 24
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 46
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 102
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 234
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
dirigeant . auto-entrepreneur . revenu net: 20000
dirigeant . auto-entrepreneur . revenu net . après impôt: 20000
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 7`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 57089
dirigeant . auto-entrepreneur . cotisations et contributions: 591
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 585
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 138
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 18
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 59
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 116
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 254
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 585
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
dirigeant . auto-entrepreneur . revenu net: 50000
dirigeant . auto-entrepreneur . revenu net . après impôt: 50000
dirigeant . rémunération . impôt: 0"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 8`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 79920
dirigeant . auto-entrepreneur . cotisations et contributions: 827
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 819
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 193
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 26
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 82
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 162
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 356
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 819
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
dirigeant . auto-entrepreneur . revenu net: 70000
dirigeant . auto-entrepreneur . revenu net . après impôt: 69023
dirigeant . rémunération . impôt: 977"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 9`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 114166
dirigeant . auto-entrepreneur . cotisations et contributions: 1181
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 1170
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 276
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 37
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 118
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 231
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 508
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 1170
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
dirigeant . auto-entrepreneur . revenu net: 100000
dirigeant . auto-entrepreneur . revenu net . après impôt: 96902
dirigeant . rémunération . impôt: 3098"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 10`] = `
"dirigeant . auto-entrepreneur . chiffre d'affaires: 1141746
dirigeant . auto-entrepreneur . cotisations et contributions: 11812
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations: 11703
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . autres contributions: 2762
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . invalidité-décès: 369
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . maladie-maternité: 1176
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite complémentaire: 2311
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . répartition . retraite de base: 5085
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BIC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . service BNC Cipav . taux: null
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement: 11703
dirigeant . auto-entrepreneur . cotisations et contributions . cotisations . vente restauration hébergement . taux: 12
dirigeant . auto-entrepreneur . revenu net: 1000000
dirigeant . auto-entrepreneur . revenu net . après impôt: 871836
dirigeant . rémunération . impôt: 128164

Notifications affichées : entreprise . imposition . régime . micro-entreprise . alerte seuil dépassés"
`;
